Bug 327841 (also fixes 329110 and 321936) r=bryner. Implement failed favicon cache in favicon service, update favicons for redirected bookmarks, don't load favicon data if we have a recent copy.